# python-package-template

./: LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py
src/pycli/: __init__.py  pycli.py
tests/: main.py
