[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package-template"
version = "0.1.0"
description = "Your package's description."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "your name / github username", email = "your contact email" }]
# Add keywords that fit your package.
keywords = []
# Please modify the classifiers according to your package.
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/example/example"
Documentation = "https://github.com/example/example#readme"
Repository = "https://github.com/example/example"
Issues = "https://github.com/example/example/issues"
